--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -5,7 +5,7 @@ body {
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   font-family: 'Helvetica Neue', 'arial', 'Hiragino Kaku Gothic ProN', Meiryo,
     sans-serif;
 }
@@ -27,6 +27,7 @@ a:hover {
   z-index: 9;
   width: 100%;
   height: 70px;
+  line-height: 70px;
   padding: 14px;
   left: 0;
   bottom: 0px;
@@ -54,7 +55,7 @@ a:hover {
   margin-right: 40px;
   padding: 2px;
   vertical-align: middle;
-  line-height: 35px;
+  /* line-height: 35px; */
 }
 
 .rank .yesterday {
