--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -28,7 +28,7 @@ a:hover {
   z-index: 9;
   width: 100%;
   height: 70px;
-  line-height: 70px;
+  /* line-height: 70px; */
   padding: 14px;
   left: 0;
   bottom: 0px;
@@ -56,16 +56,16 @@ a:hover {
   margin-right: 40px;
   padding: 2px;
   vertical-align: middle;
-  /* line-height: 35px; */
+  line-height: 35px;
 }
 
-.rank .yesterday {
+.rank .meta {
   font-size: 25px;
-  color: #258fb8;
+  color: tomato;
 }
 
-.rank .compare {
-  color: tomato;
+.rank .meta svg {
+  margin-right: 3px;
 }
 
 .footer:hover {
@@ -131,9 +131,6 @@ a:hover {
 
 .right {
   right: 0;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -146,15 +143,7 @@ a:hover {
   color: #fff;
   margin: 10px 5px;
   padding: 5px 10px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
   border-radius: 3px;
-  -webkit-transition: background 0.3s ease;
-  -moz-transition: background 0.3s ease;
-  -ms-transition: background 0.3s ease;
-  -o-transition: background 0.3s ease;
   transition: background 0.3s ease;
   line-height: 20px;
   font-size: 15px;
