--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -1,3 +1,10 @@
+html,
+body,
+#app {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   transition-property: 'background-image';
   transition-duration: 1s;
@@ -70,6 +77,14 @@ a:hover {
 
 .footer:hover {
   opacity: 0.8;
+}
+
+.loading-spinner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav {
