--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -138,7 +138,7 @@ a:hover {
   }
 }
 
-#top-right {
+.top {
   top: 0;
   position: absolute;
   z-index: 2;
@@ -146,15 +146,20 @@ a:hover {
 
 .right {
   right: 0;
-  transition: all 0.3s ease-in-out;
 }
 
-#top-menu {
+.left {
+  left: 0;
+}
+
+.top-menu {
   color: #fff;
+  margin-left: 30px;
   margin-right: 30px;
+  margin-top: 10px;
 }
 
-#top-menu li a {
+.top-menu li a {
   color: #fff;
   margin: 10px 5px;
   padding: 5px 10px;
@@ -164,6 +169,6 @@ a:hover {
   font-size: 15px;
 }
 
-#top-menu li a:hover {
+.top-menu li a:hover {
   background: rgba(0, 0, 0, 0.4);
 }
