--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -69,10 +69,14 @@ a:hover {
 .rank .meta {
   font-size: 25px;
   color: tomato;
+  display: flex;
+  align-items: center;
 }
 
 .rank .meta svg {
-  margin-right: 3px;
+  margin-right: 5px;
+  width: 20px;
+  height: 20px;
 }
 
 .footer:hover {
