--- a/source/styles/options.css
+++ b/source/styles/options.css
@@ -7,58 +7,6 @@ body {
   margin: 0;
 }
 
-p {
-  margin: 0 0 1rem 0;
-}
-
-h1,
-h2,
-h3 {
-  font-weight: normal;
-  line-height: 1;
-}
-
-h1 {
-  border-bottom: 1px solid #dbdbdb;
-  font-size: 1.5rem;
-  margin: 0 0 1.5rem 0;
-  padding: 1rem 0 1.5rem 0;
-}
-
-h2 {
-  font-size: 1.3em;
-  margin-bottom: 0.4em;
-}
-
-h3 {
-  color: black;
-  font-size: 1.2em;
-  margin-bottom: 0.5em;
-}
-
-a {
-  color: rgb(17, 85, 204);
-  text-decoration: underline;
-}
-
-label {
-  display: block;
-}
-
-button {
-  background: #4608ad;
-  border: none;
-  border-radius: 0.2rem;
-  color: white;
-  font-size: inherit;
-  padding: 0 0.6rem;
-  line-height: 1.8rem;
-}
-
-a:active {
-  color: rgb(5, 37, 119);
-}
-
 .container {
   margin: 0 auto;
   max-width: 800px;
@@ -68,17 +16,13 @@ a:active {
   padding: 1.5rem;
 }
 
-#about {
+.about {
   border-top: 1px solid #dbdbdb;
   margin-top: 1.5rem;
   padding: 1.5rem 0 0 0;
 }
 
-#about button {
-  background: white;
-  border: 1px solid #dbdbdb;
-  cursor: pointer;
-  color: #303942;
+.about button {
   margin-bottom: 0.5rem;
   margin-inline-end: 1rem;
 }
